TAG: qcreports_db-4-4-1-18
DATE: 04/11/2011
STAFF: lec
CHANGES:
1) TR10668/MRK_NoGO.py
2) TR10636/MRK_GOUnknown.sql

TAG: qcreports_db-4-4-1-17
DATE: 04/08/2011
STAFF: sc
CHANGES: TR10653
1) added  weekly/VOC_MPNewTerms.py 

TAG: qcreports_db-4-4-1-16
DATE: 04/06/2011
STAFF: lec
CHANGES:
1) TR0650/VOC_InvalidInferred.py

TAG: qcreports_db-4-4-1-15
DATE: 04/06/2011
STAFF: dbm
CHANGES:
1) Install: Make a sym link from the weekly directory to the GO_stats.py
   report in the mgd directory so it runs weekly and daily.
2) qcweekly_reports.csh: Archive the GO_stats report after it is created,
   similar to what is done when it runs nightly.

TAG: qcreports_db-4-4-1-14
DATE: 04/04/2011
STAFF: lec
CHANGES:
1) no tr; connie asked the PRB_CellLine.sql be restored
   see qcreports_db-4-4-0-15

TAG: qcreports_db-4-4-1-13
DATE: 04/01/2011
STAFF: dbm
CHANGES:
1) TR10662: GXD_Stats.py - added BGEM (J:162220) to electronic references

TAG: qcreports_db-4-4-1-12
DATE: 03/24/2011
STAFF: lec
CHANGES:
1) TR10642
   mgd/GXD_AssayInIndexNotInCache.py
   mgd/GXD_FullCodeGene.sql

TAG: qcreports_db-4-4-1-11
DATE: 03/08/2011
STAFF: lec
CHANGES:
1) TR10626/MRK_NoENSEMBL.py, MRK_NoVEGA.py

TAG: qcreports_db-4-4-1-10
DATE: 02/16/2011
STAFF: lec
CHANGES:
1) TR3067/make a monthly report/GXD_References.sql

TAG: qcreports_db-4-4-1-9
DATE: 02/14/2011
STAFF: lec
CHANGES:
1) TR10589/ALL_MPAnnot.py

TAG: qcreports_db-4-4-1-8
DATE: 02/10/2011
STAFF: lec
CHANGES:
1) TR10541/MRK_NoENSEMBL.py

TAG: qcreports_db-4-4-1-7
TAG: qcreports_db-4-4-1-6
DATE: 02/09/2011
STAFF: lec
CHANGES:
1) TR10582/weekly/GIA_MRK_ENSEMBL.py, GIA_MRK_Sequence.py
   moved from reports_db/weekly

TAG: qcreports_db-4-4-1-5
DATE: 02/07/2011
STAFF: lec
CHANGES:
1) TR10559/monthly/MRK_GOAnnot.py

TAG: qcreports_db-4-4-1-4
DATE: 01/25/2011
STAFF: lec
CHANGES:
1) TR10523/ALL_MPAnnot.py/Total MP Annotations per Gene

TAG: qcreports_db-4-4-1-3
DATE: 01/19/2011
STAFF: lec
CHANGES: