@@ -1,3 +1,9 @@
+TAG: qcreports_db-4-4-1-19
+DATE: 04/20/2011
+STAFF: sc
+CHANGES: TR10653
+1) fixed bug in weekly/VOC_MPNewTerms.py
+
 TAG: qcreports_db-4-4-1-18
 DATE: 04/11/2011
 STAFF: lec
